@@ -34,7 +34,6 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
@@ -188,7 +187,7 @@ public class PatronActionSessionRepository {
     }
 
     Result<CqlQuery> actionTypeQuery = createActionTypeCqlQuery(
-      expiredSessions.get(0).getActionType());
+      expiredSessions.getFirst().getActionType());
 
     return findWithMultipleCqlIndexValues(patronActionSessionsStorageClient,
       PATRON_ACTION_SESSIONS, PatronSessionRecord::from)
@@ -269,7 +268,7 @@ public class PatronActionSessionRepository {
     List<String> loanIds = sessionRecords.getRecords().stream()
       .map(PatronSessionRecord::getLoanId)
       .map(UUID::toString)
-      .collect(Collectors.toList());
+      .toList();
 
     return loanRepository.findByIds(loanIds)
       .thenCompose(r -> r.after(this::fetchCampusesForLoanItems))
@@ -358,6 +357,6 @@ public class PatronActionSessionRepository {
       .filter(Item::isFound)
       .map(Item::getLocation)
       .filter(Objects::nonNull)
-      .collect(Collectors.toList());
+      .toList();
   }
 }
